svd edits, would still be helpful to add to svd explanation

--- a/09_Ch_10_Singular_Value_Decomposition/111-SVD.ipynb
+++ b/09_Ch_10_Singular_Value_Decomposition/111-SVD.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 10.1 SVD Theory\n",
+    "title: 10.1 The Singular Value Decomposition\n",
     "subject:  Singular Value Decomposition (SVD)\n",
     "subtitle: \n",
-    "short_title: 10.1 SVD Theory\n",
+    "short_title: 10.1 The Singular Value Decomposition\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -72,7 +72,7 @@
     "\n",
     "The above description is reminiscent of the [optimization principle](../08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb#opt_eig_thm) we saw for characterizing eigenvalues of symmetric matrices, albeit with a focus on maximizing length $\\|A\\vv x\\|$ rather than the quadratic form $\\vv x^T A \\vv x$. What we'll see next is that this description of $\\vv v_1$ and $|\\lambda_1|$ has an analogue for rectangular matrices that will lead to the singular value decomposition.\n",
     "\n",
-    "::::{prf:example}\n",
+    "::::{prf:example} Finding the maximum \"stretch\" of a linear map\n",
     ":label: eg_1\n",
     "The matrix $A = \\begin{bmatrix} 4 & 11 & 14 \\\\ 8 & 7 & -2 \\end{bmatrix}$ defines a linear map $\\vv x \\mapsto A \\vv x$ from $\\mathbb{R}^3$ to $\\mathbb{R}^2$. If we consider the effects of this map on the unit sphere $\\{\\vv x \\in \\mathbb{R}^3 \\mid \\|\\vv x\\| = 1\\}$, we observe that multiplication by $A$ transforms this sphere in $\\mathbb{R}^3$ into an ellipse in $\\mathbb{R}^2$:\n",
     "\n",
@@ -86,10 +86,11 @@
     "Our task is to find a unit vector $\\vv x$ at which the length $\\|A\\vv x\\|$ is maximized, and compute this maximum length. That is, we want to solve the optimization problem:\n",
     "\n",
     "$$\n",
-    "\\text{maximize} \\|A \\vv x\\|\n",
+    "&\\text{Maximize $\\|A \\vv x\\|$} \\\\\n",
+    "&\\text{Subject to $\\|\\vv x\\| = 1$} \n",
     "$$\n",
     "\n",
-    "over choices of $\\vv x$ satisfying $\\|\\vv x\\|=1$. Our first observation is that the quantity $\\|A\\vv x\\|^2$ is maximized by the same $\\|\\vv x\\|$ that maximizes $\\|A\\vv x\\|$, but that $\\|A\\vv x\\|^2$ is easier to work with. Specifically, note that\n",
+    "Our first observation is that the quantity $\\|A\\vv x\\|^2$ is maximized by the same $\\|\\vv x\\|$ that maximizes $\\|A\\vv x\\|$, but that $\\|A\\vv x\\|^2$ is easier to work with (since its a quadratic form instead of the square root of a quadratic form). Specifically, note that\n",
     "\n",
     "$$\n",
     "\\|A\\vv x\\|^2 = \\langle A \\vv x, A\\vv x \\rangle = (A\\vv x)^T(A\\vv x) = \\vv x^TA^TA\\vv x = \\vv x^T(A^TA)\\vv x.\n",
@@ -142,40 +143,50 @@
     "\n",
     "This example suggests that the effect of a matrix $A$ on the unit sphere in $\\mathbb{R}^3$ is related to the quadratic form $\\vv x^T A^TA \\vv x$. What we'll see next is that _the entire geometric behavior of the map $\\vv x \\mapsto A \\vv x$_ is captured by this quadratic form.\n",
     "\n",
-    "::::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "::::\n",
+    "\n",
     "## The Singular Values of an $m \\times n$ Matrix\n",
     "\n",
-    "Consider an $m \\times n$ real matrix $A \\in \\mathbb{R}^{m \\times n}$. Then $A^TA$ is an $n \\times n$ symmetric matrix, and can be orthogonally diagonalized. Let $V = \\bm \\vv v_1 & \\cdots & \\vv v_n\\em$ be an orthogonal matrix composed of orthonormal eigenvectors of $A^TA$, and let $\\lambda_1, \\ldots, \\lambda_n$ be the associated eigenvalues of $A^TA$. Then for $i = 1, \\ldots, n$,\n",
+    "Consider an $m \\times n$ real matrix $A \\in \\mathbb{R}^{m \\times n}$. Then, $A^TA$ is an $n \\times n$ symmetric matrix, and can be orthogonally diagonalized via the [spectral factorization](#spectral_thm), i.e., we can write $A^\\top A = Q \\Lambda Q^\\top$, where $Q$ is an orthogonal matrix composed of orthonormal eigenvectors of $A^\\top A$, and $\\Lambda$ is a diagonal matrix containing the eigenvalues of $A^\\top A$.\n",
     "\n",
-    "\\begin{align*}\n",
-    "\\|A \\vv v_i\\|^2 &= (A \\vv v_i)^T(A \\vv v_i) = \\vv v_i^T(A^TA \\vv v_i) \\\\\n",
-    "&= \\vv v_i^T(\\lambda_i \\vv v_i) \\\\\n",
-    "&= \\lambda_i \\vv v_i^T \\vv v_i = \\lambda_i \\|\\vv v_i\\|^2 \\\\\n",
-    "&= \\lambda_i.\n",
-    "\\end{align*}\n",
-    "\n",
-    "This tells us that all of the eigenvalues $\\lambda_i = \\|A \\vv v_i\\|^2 \\geq 0$, since norms can only take on nonnegative values. $A^TA$ is a positive semidefinite matrix. Let's assume that we've ordered our eigenvalues in decreasing order:\n",
+    "We can write $Q = \\bm \\vv v_1 & \\cdots & \\vv v_n\\em$, where $\\vv{v_1}$ are unit eigenvectors of $A^{\\top} A$, and $\\Lambda = \\text{diag}(\\lambda_1, \\dots, \\lambda_n)$, where $\\lambda_i$ is the eigenvalue corresponding to $\\vv{v_i}$. Then, for $i = 1, \\dots, n$:\n",
     "\n",
     "$$\n",
-    "\\lambda_1 \\geq \\lambda_2 \\geq \\cdots \\geq \\lambda_n \\geq 0.\n",
+    "\\|A \\vv v_i\\|^2 &= (A \\vv v_i)^\\top(A \\vv v_i) = \\vv v_i^\\top(A^\\top A \\vv v_i) \\\\\n",
+    "&= \\vv v_i^\\top(\\lambda_i \\vv v_i) \\\\\n",
+    "&= \\lambda_i \\vv v_i^\\top \\vv v_i = \\lambda_i \\|\\vv v_i\\|^2 \\\\\n",
+    "&= \\lambda_i \\quad\\text{(since $\\vv{v_i}$ has unit norm)}.\n",
     "$$\n",
     "\n",
-    "The _singular values of $A$_ are the positive square roots of the nonzero eigenvalues $\\lambda_i > 0$ of $A^TA$ denoted $\\sigma_i$. That is, let $\\lambda_1 \\geq \\lambda_2 \\geq \\cdots \\geq \\lambda_r > 0$ and $\\lambda_{r+1} = \\lambda_{r+2} = \\cdots = \\lambda_n = 0$ be a partition of the eigenvalues such that $\\lambda_i > 0$ for $i = 1, \\ldots, r$, and $\\lambda_i = 0$ for $i = r+1, \\ldots, n$. Then $A$ has $r$ singular values, defined as\n",
-    "$$\n",
-    "\\sigma_i = \\sqrt{\\lambda_i}, \\quad i = 1, \\ldots, r.\n",
-    "$$\n",
+    "This tells us that each eigenvalue $\\lambda_i$ of $A^\\top A$ can be written as the squared norm of $A \\vv{v_i}$. In particular, this tells us that $A^\\top A$ has nonnegative eigenvalues, i.e., is positive semidefinite. We will use these eigenvalues to define the *singular values* of $A$:\n",
+    "\n",
+    "::::{prf:definition} The Singular Values of a Matrix\n",
+    ":label: singular-values-defn\n",
+    "\n",
+    "Given a matrix $A \\in \\mathbb{R}^{m\\times n}$, let $\\lambda_1 \\geq \\lambda_2 \\geq \\dots \\geq \\lambda_n$ be the eigenvalues of $A^\\top A$ in nonincreasing order, counting multiplicities.\n",
+    "\n",
+    "The *singular values* of $A$ are the positive square roots of the nonzero eigenvalues $\\lambda_i > 0$ of $A^\\top A$, and are denoted $\\sigma_i$. \n",
+    "\n",
+    "In other words, if $A^\\top A$ has rank $r$ (or equivalently, $A$ has rank $r$), then $A$ has $r$ nonzero eigenvalues $\\lambda_1 \\geq \\dots \\geq \\lambda_r > 0$, counting multiplicities. Then, $A$ has $r$ singular values, defined as $\\sigma_i = \\sqrt{\\lambda_i}$ for $i = 1, \\dots, r$.\n",
+    "::::\n",
     "\n",
     ":::{warning}\n",
     "Some texts include the zero eigenvalues $\\lambda_{r+1}, \\ldots, \\lambda_n$ of $A^TA$ as singular values of $A$. This is simply a different convention and is mathematically equivalent. However, we find our definition to be more natural for our purposes.\n",
     ":::\n",
     "\n",
-    "::::{prf:example} \n",
+    "Whereas eigenvalues are only defined for square matrices, singular values are defined for *any* matrices. Soon, we will see how the singular values of a matrix can be used to compute a useful factorization of any matrix, known as the singular value decomposition.\n",
+    "\n",
+    "This definition of singular values allows us to give an alternative description of $\\text{rank}(A)$: the rank of $A$ is the number of its singular values.\n",
+    "\n",
+    ":::{note}Numerical Note\n",
+    "In certain cases, the rank of $A$ may be very sensitive to small changes in the entries of $A$. The obvious approach of counting the \\# of pivot columns in $A$ does not work well if $A$ is row reduced by a computer, as roundoff errors often create a row echelon form with full rank. In practice, the most reliable way of computing the rank of a large matrix $A$ is to count the number of singular values larger than a small threshold $\\epsilon$ (typically on the order of $10^{-12}$, but can vary depending on applications). In this case, singular values smaller than $\\epsilon$ are treated as zeros for all practical purposes, and the _effective rank of $A$_ is computed by counting the remaining nonzero singular values.\n",
+    ":::\n",
+    "\n",
+    "## A Variational Definition of the Singular Values\n",
+    "\n",
+    "The above definition was more of a \"direct\" definition of singular values. In the next example, we will see an analog to the [variational characterization of eigenvalues](#variational-thm).\n",
+    "\n",
+    "::::{prf:example} An analog to the variational characterization of eigenvalues\n",
     ":label: major_minor_eg\n",
     "Using the same $A = \\begin{bmatrix} 4 & 11 & 14 \\\\ 8 & 7 & -2 \\end{bmatrix}$ as the previous example,\n",
     "we have $\\sigma_1 = \\sqrt{360} = 6\\sqrt{10}$, $\\sigma_2 = \\sqrt{90} = 3\\sqrt{10}$. In this case, $A$ only has two singular values as $\\lambda_3 = 0$. For this example, $r = 2$, and $\\lambda_1 = 360 > \\lambda_2 = 90 > \\lambda_3 = 0$.\n",
@@ -193,8 +204,9 @@
     ":width: 300px\n",
     ":align: center\n",
     ":::\n",
-    "That $A\\vv v_1$ and $A\\vv v_2$ are orthogonal is no accident, as the next theorem shows.\n",
-    "::::"
+    "::::\n",
+    "\n",
+    "In the above example, the fact that $A\\vv v_1$ and $A\\vv v_2$ are orthogonal was no accident. In the next section, we'll explore this in more detail."
    ]
   },
   {
@@ -333,7 +345,57 @@
     "Some textbooks define the singular value decomposition of $A$ as $A = \\hat{U} \\hat{\\Sigma} \\hat{V}^T$ --- this is necessary when allowing for singular values equal to zero. When only considering nonzero singular values, as we do, $A = U\\Sigma V^T$ is the appropriate definition. This is sometimes called the _compact SVD of $A$_, but we will just call it the SVD.\n",
     ":::\n",
     "\n",
-    "::::\n"
+    "::::\n",
+    "\n",
+    "#### Python Break!\n",
+    "\n",
+    "In Python, we can find the SVD of a matrix using the `numpy.linalg.svd` function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U matrix:\n",
+      "[[-0.21483724  0.88723069  0.40824829]\n",
+      " [-0.52058739  0.24964395 -0.81649658]\n",
+      " [-0.82633754 -0.38794278  0.40824829]]\n",
+      "\n",
+      "Singular values:\n",
+      "[1.68481034e+01 1.06836951e+00 3.33475287e-16]\n",
+      "\n",
+      "V^T matrix:\n",
+      "[[-0.47967118 -0.57236779 -0.66506441]\n",
+      " [-0.77669099 -0.07568647  0.62531805]\n",
+      " [-0.40824829  0.81649658 -0.40824829]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6],\n",
+    "              [7, 8, 9]])\n",
+    "\n",
+    "U, S, Vt = np.linalg.svd(A)\n",
+    "\n",
+    "# U: Left singular vectors\n",
+    "print(\"U matrix:\")\n",
+    "print(U)\n",
+    "\n",
+    "# S: Singular values (returned as a 1D array)\n",
+    "print(\"\\nSingular values:\")\n",
+    "print(S)\n",
+    "\n",
+    "# Vt: Right singular vectors (transposed)\n",
+    "print(\"\\nV^T matrix:\")\n",
+    "print(Vt)\n"
    ]
   },
   {
@@ -529,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
