--- a/02-howto.ipynb
+++ b/02-howto.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "[^code-note]: Note that sometimes the code will look a little bit different in the notebook.  That's because we sometimes hide code that's just needed for setup in the main notes.\n",
     "\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=02-howto.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=02-howto.ipynb)"
    ]
   },
   {
