--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb
@@ -37,7 +37,7 @@
    "id": "697aea0b-2cea-4387-8ad4-220fe138867f",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 01 - Systems of linear equations, vectors, matrices, Gauss Elimination and LU-factorization.pdf>`"
    ]
@@ -566,7 +566,7 @@
    "id": "1b5d235d-6b8e-4422-84fe-0dce26358c33",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-gauss.ipynb)"
    ]
   }
  ],
