--- a/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb
@@ -37,7 +37,7 @@
    "id": "fc99dddf-5c7e-4c92-8111-fb156f6af7fe",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 02 - Pivots + Permutations, Matrix Inverses (Gauss-Jordan), Transposes, Symmetric Matrices, and General Linear Systems.pdf>`"
    ]
@@ -562,7 +562,7 @@
    "id": "39165c0f-fa19-44ce-8eac-09ed6d261942",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/024-linsys-perms.ipynb)\n"
    ]
   }
  ],
