--- a/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb
@@ -37,7 +37,7 @@
    "id": "04e67bbe-3d79-4a20-8327-f68b183e9790",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 02 - Pivots + Permutations, Matrix Inverses (Gauss-Jordan), Transposes, Symmetric Matrices, and General Linear Systems.pdf>`"
    ]
@@ -576,7 +576,7 @@
    "id": "a2e6b1da-e6cf-4009-9603-58023cee6b91",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://ovh.mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Ch_1_Linear_Algebraic_Systems/025-linsys-inverses.ipynb)\n"
    ]
   }
  ],
