--- a/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -149,19 +149,26 @@
     "\n",
     "1. The set $\\mathbb{S}_{0:T}$ that are zero for all indices except $k = \\{ 0, 1, 2, ..., T\\}$: if $\\{ y_k \\}, \\{z_k\\} \\in \\mathbb S_{0:T}$ then $c\\{y_k\\} + d\\{z_k\\} = \\{cy_k + dz_k\\}$ is also zero for all indices not in $\\{0, 1, ..., T\\}$ for any $c, d, \\in \\mathbb R$.\n",
     "\n",
-    "2. The set $\\Sigma_0$ of signals that sum to zero, i.e., $\\{y_k\\} \\in \\Sigma_0$ if and only if \n",
+    "2. The set $\\Sigma_0$ of signals that sum to zero and are absolutely convergent, i.e., $\\{y_k\\} \\in \\Sigma_0$ if and only if \n",
     "\n",
     "\\begin{align*}\n",
-    "    \\sum_{k = -\\infty}^{\\infty}{y_k} = 0\n",
+    "    \\sum_{k = -\\infty}^{\\infty}{y_k} = 0, \\quad \\sum_{k = -\\infty}^{\\infty}|y_k| < \\infty\n",
     "\\end{align*}\n",
     "\n",
     "To check this, we compute the sum of $c\\{y_k\\} + d\\{z_k\\} = \\{cy_k + dz_k\\}$:\n",
+    "\\begin{align*}\n",
+    "    \\sum_{k = -\\infty}^{\\infty}|cy_k + dz_k| &\\leq |c|\\sum_{k = -\\infty}^{\\infty}|y_k| + |d|\\sum_{k = -\\infty}^{\\infty}|z_k| < \\infty \n",
+    "\\end{align*}\n",
+    "\n",
+    "where we have used that $|cy_k + dz_k|\\leq |cy_k| + |dz_k| = |c||y_k| + |d||z_k|$, and \n",
     "\n",
     "\\begin{align*}\n",
     "    \\sum_{k = -\\infty}^{\\infty}{cy_k + dz_k} &= c\\sum_{k = -\\infty}^{\\infty}{y_k} + d\\sum_{k = -\\infty}^{\\infty}{z_k} \\\\\n",
-    "    &= c\\cdot 0 + d\\cdot 0 \\tag{since $\\sum y_k = \\sum z_k = 0 $}\\\\\n",
+    "    &= c\\cdot 0 + d\\cdot 0 \\quad \\text{since $\\sum y_k = \\sum z_k = 0 $}\\\\\n",
     "    &= 0 \n",
     "\\end{align*}\n",
+    "\n",
+    "Note that we need the absolute convergence condition, i.e., that $\\sum_{k = -\\infty}^{\\infty}|y_k| < \\infty$ to split up the infinite sum above into two sums (check back on your Math 1400/1410 notes to see why!).\n",
     "\n",
     ":::"
    ]
