--- a/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042a-NLP-case-study.ipynb
@@ -216,7 +216,7 @@
     "user_expressions": []
    },
    "source": [
-    "#### Step 3: converting latent vectors to predictions\n",
+    "### Step 3: converting latent vectors to predictions\n",
     "\n",
     "The last component of Word2Vec is the mapping from the latent vector to the final prediction, i.e. the decoder. From the [previous section](#word2vec-mlp), we know the decoder has form: $\\mathrm{Dec}(\\bold z_{\\mathrm{latent}}) = f(\\bold W_{\\mathrm{out}} \\; \\bold z_{\\mathrm{latent}})$, where $f(\\cdot)$ was some unspecified function. If we had ignored $f(\\cdot)$, then the output would be a matrix multiplication of the latent vector. How do we interpret this? If we recall the goal of CBOW or CSG, we want to be able to extract a predicted word or set of words. However, a vector resulting from matrix multiplication may have entries much larger than $1$, or even negative, leading to ambiguities in interpreting the output. What if we could define a function $f(\\cdot)$ that normalizes these entries in a principled way? Enter the $\\mathrm{Softmax}$ function.\n",
     "\n",
