--- a/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: 3.2 Angles and the Cauchy–Schwarz Inequality\n",
+    "title: 3.2 Angles, the Cauchy–Schwarz Inequality, and General Norms\n",
     "subject: Inner Products and Norms\n",
     "subtitle: Computing angles between general vectors\n",
-    "short_title: 3.2 Angles\n",
+    "short_title: 3.2 Angles and General Norms\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
